[tool.poetry]
name = "quiz_system"
version = "0.1.0"
description = "quiz_system using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.51.0" }

[tool.poetry.scripts]
quiz_system = "quiz_system.main:run"
run_crew = "quiz_system.main:run"
train = "quiz_system.main:train"
replay = "quiz_system.main:replay"
test = "quiz_system.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
